force-app/main/default/objects/RE_Contract__c/RE_Contract__c.object-meta.xml
<CustomObject>
    <label>RE SAP Contract</label>
    <nameField>
        <displayFormat>CN-{0000000}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE SAP Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>