force-app/main/default/objects/RE_Contract__c/fields/Contract_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group_Number__c</fullName>
    <label>Contract Group Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>