force-app/main/default/objects/RE_Contract__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>