force-app/main/default/objects/RE_Contract__c/fields/Handling_Type__c.field-meta.xml
<CustomField>
    <fullName>Handling_Type__c</fullName>
    <label>Handling Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>