force-app/main/default/objects/RE_Contract__c/fields/Open_Qty__c.field-meta.xml
<CustomField>
    <fullName>Open_Qty__c</fullName>
    <label>Open Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>