force-app/main/default/objects/RE_Contract__c/fields/RE_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>