force-app/main/default/objects/RE_Contract__c/fields/RE_Mot__c.field-meta.xml
<CustomField>
    <fullName>RE_Mot__c</fullName>
    <label>Mot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>