force-app/main/default/objects/RE_Contract__c/fields/RE_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Code__c</fullName>
    <formula>RE_Product_Name__r.RE_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RE Product Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>