force-app/main/default/objects/RE_Contract__c/fields/RE_Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>RE_Shipping_Condition__c</fullName>
    <label>Shipping Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>