force-app/main/default/objects/RE_Contract__c/fields/Reason_for_rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_rejection__c</fullName>
    <label>Reason for Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>