force-app/main/default/objects/RE_Contract__c/fields/RT_Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>RT_Contract_Description__c</fullName>
    <label>Contract Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>