force-app/main/default/objects/RE_Contract__c/fields/RT_Contract_Item__c.field-meta.xml
<CustomField>
    <fullName>RT_Contract_Item__c</fullName>
    <label>Contract Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>