force-app/main/default/objects/RE_Contract__c/fields/RT_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>RT_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>