force-app/main/default/objects/RE_Contract__c/fields/RT_Division__c.field-meta.xml
<CustomField>
    <fullName>RT_Division__c</fullName>
    <label>Division</label>
    <length>50</length>
    <type>Text</type>
</CustomField>