force-app/main/default/objects/RE_Contract__c/fields/RT_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>RT_Pricing_Date__c</fullName>
    <label>Pricing Date</label>
    <type>Date</type>
</CustomField>