force-app/main/default/objects/RE_Contract__c/fields/RT_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Product_Code__c</fullName>
    <formula>RE_Product_Name__r.RT_Product_Code__c</formula>
    <label>Material</label>
    <type>Text</type>
</CustomField>