force-app/main/default/objects/RE_Contract__c/fields/RT_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Purchase_Order_Number__c</fullName>
    <label>Purchase Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>