force-app/main/default/objects/RE_Contract__c/fields/RT_Sales_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Sales_Document_Type__c</fullName>
    <label>Sales Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>