force-app/main/default/objects/RE_Contract__c/fields/RT_Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>RT_Ship_to_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RE_Contracts_Ship_to</relationshipName>
    <type>Lookup</type>
</CustomField>