force-app/main/default/objects/RE_Contract__c/fields/RT_Ship_to_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Ship_to_Number__c</fullName>
    <formula>RT_Ship_to_Name__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship to Number</label>
    <type>Text</type>
</CustomField>