force-app/main/default/objects/RE_Contract__c/fields/RT_Sold_To_Name__c.field-meta.xml
<CustomField>
    <fullName>RT_Sold_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold to Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RE_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>