force-app/main/default/objects/RE_Contract__c/fields/RT_Sold_to_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Sold_to_Number__c</fullName>
    <formula>RT_Sold_To_Name__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold to Number</label>
    <type>Text</type>
</CustomField>