force-app/main/default/objects/RE_Contract__c/fields/RT_Terms_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>RT_Terms_of_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terms of Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Code - Value mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>Payment Term</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>RE SAP Contracts</relationshipLabel>
    <relationshipName>RE_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>