force-app/main/default/objects/RE_Contract__c/fields/RT_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RT_Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>