force-app/main/default/objects/RE_Contract__c/fields/RT_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>RT_Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>