force-app/main/default/objects/RE_Contract__c/fields/Ship_to_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_City__c</fullName>
    <formula>RT_Ship_to_Name__r.ShippingCity</formula>
    <label>Ship to City</label>
    <type>Text</type>
</CustomField>