force-app/main/default/objects/RE_Contract__c/fields/Ship_to_Status__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Status__c</fullName>
    <formula>Text(RT_Ship_to_Name__r.Account_Status__c)</formula>
    <label>Ship-to Status</label>
    <type>Text</type>
</CustomField>