force-app/main/default/objects/RE_Contract__c/fields/Ship_to_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Street__c</fullName>
    <formula>RT_Ship_to_Name__r.ShippingStreet</formula>
    <label>Ship to Street</label>
    <type>Text</type>
</CustomField>