force-app/main/default/objects/RE_Contract__c/fields/Target_quantity__c.field-meta.xml
<CustomField>
    <fullName>Target_quantity__c</fullName>
    <label>Target quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>