force-app/main/default/objects/RE_Contract__c/fields/Target_quantity_UoM__c.field-meta.xml
<CustomField>
    <fullName>Target_quantity_UoM__c</fullName>
    <label>Target quantity UoM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>