force-app/main/default/objects/RE_Contract__c/fields/Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Type__c</fullName>
    <label>Valuation Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>