force-app/main/default/objects/RE_Contract__c/recordTypes/Turkey.recordType-meta.xml
<RecordType>
    <fullName>Turkey</fullName>
    <active>true</active>
    <label>Turkey</label>
</RecordType>